--- a/beehive-digest-tools/Dockerfile
+++ b/beehive-digest-tools/Dockerfile
@@ -7,4 +7,6 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
 
+COPY ssh-config /root/.ssh/config
+
 CMD [ "bash", "./update-digests.sh" ]
